# robotica_ufu

./: .gitignore
devel/: .catkin  .rosinstall
devel/include/behaviour_msgs/: ActionMsg.h  ActionPanelSrvRequest.h  ActionPanelSrvResponse.h  GameControllerMsg.h  GameControllerPlayerMsg.h  GameControllerSrvRequest.h  GameControllerSrvResponse.h  GameControllerTeamMsg.h  GameState.h  StateMachineActionsMsg.h  service_pageRequest.h  service_pageResponse.h  yamlTransitionSrvRequest.h  yamlTransitionSrvResponse.h
devel/include/dynamixel_workbench_msgs/: AX.h  DynamixelCommandRequest.h  DynamixelState.h  DynamixelStateList.h  EX.h  JointCommand.h  JointCommandRequest.h  MX.h  (+9 more)
player/: actuator_requests.txt
src/simulacao/natasha_large_version/: CMakeLists.txt  package.xml
src/simulacao/natasha_large_version/config/: joint_names_natasha_large_version.yaml
src/simulacao/natasha_large_version/launch/: display.launch  gazebo.launch
src/simulacao/natasha_large_version/meshes/: CAM_link.STL  HEAD_0_link.STL  HEAD_1_link.STL  LARM_1_link.STL  LARM_2_link.STL  LFOOT_link.STL  LLEG_0_link.STL  LLEG_1_link.STL  LLEG_2_link.STL  LLEG_3_link.STL  LLEG_4_link.STL  RARM_0_link.STL  RARM_1_link.STL  RARM_2_link.STL  RFOOT_link.STL  RLEG_0_link.STL  RLEG_1_link.STL  RLEG_2_link.STL  RLEG_3_link.STL  RLEG_4_link.STL  TRUNK.STL
src/simulacao/natasha_large_version/protos/: .NatashaLargeVersion.cache
src/simulacao/natasha_large_version/urdf/: natasha_large_version.csv  natasha_large_version.urdf
src/simulacao/natasha_large_version/worlds/: .natasha_large.wbproj  natasha_large.wbt
(+395 files in other folders)
